# lint-xios-xml

./: LICENSE  README.md  pyproject.toml
src/lint_xios_xml/: __init__.py  cli.py  linter.py  schema.py
src/lint_xios_xml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lint_xios_xml/schemas/: __init__.py  xios2.py  xios3.py
tests/: test_linter.py
