[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lint-xios-xml"
version = "0.1.0"
description = "XIOS XML configuration linter with Jinja2 template support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Jan Streffing", email = "jan.streffing@awi.de"},
]
keywords = ["xios", "xml", "linter", "climate", "earth-system-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "lxml",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
lint-xios-xml = "lint_xios_xml.cli:main"

[project.urls]
Homepage = "https://github.com/JanStreffing/lint-xios-xml"
Repository = "https://github.com/JanStreffing/lint-xios-xml"
Issues = "https://github.com/JanStreffing/lint-xios-xml/issues"

[tool.setuptools.packages.find]
where = ["src"]
